# xfprintd-gui

./: .gitignore  Cargo.toml  README.md  build.rs
gui/: Cargo.toml  build.rs
gui/resources/: resources.gresource.xml
gui/resources/css/: style.css
gui/resources/ui/: error_dialog.ui  info_dialog.ui  lockout_warning_dialog.ui  main.ui  sddm_hint_dialog.ui
gui/src/: config.rs  context.rs  device_manager.rs  fprintd.rs  main.rs  pam_helper.rs  pam_switch.rs  system.rs  ui.rs  util.rs
gui/src/core/: device_manager.rs  fprintd.rs  mod.rs  system.rs
gui/src/fingerprints/: enroll.rs  mod.rs  remove.rs
gui/src/pam/: mod.rs  switch.rs
gui/src/ui/: app.rs  button_handlers.rs  fingerprint_ui.rs  mod.rs  navigation.rs  pam_ui.rs
helper_tool/: Cargo.toml
helper_tool/patches/etc/pam.d/: login.patch  polkit-1.patch  sddm.patch  sudo.patch
helper_tool/src/: main.rs
packaging/: .gitignore  PKGBUILD  xfprintd-gui.desktop
resources/: resources.gresource.xml
resources/css/: style.css
resources/ui/: main.ui
src/: fprintd.rs  main.rs  pam_config.rs
