[package]
name = "xfprintd-gui-helper"
version.workspace = true
edition = "2021"
description = "XFPrintD GUI - Privileged helper to apply/remove/check fingerprint PAM configurations"

[dependencies]
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
